--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canari-front-test",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "http://ilatorre7.github.io/canari-front-test",
